# text1

./: .travis.yml  LICENSE  README.md  Setup.lhs  TODO  Warning.hs  changelog  changelog.md  default.nix  text1.cabal  text1.nix
ci/: ci.nix  jobsets.json  jobsets.nix
src/Data/: Text1.hs
src/Data/Text1/: AsSingle.hs  IsText1.hs  Text1.hs
test/: doctests.hs
tests/: hunit.hs  quickcheck.hs
