name:               text1
version:            0.0.5
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
synopsis:           Non-empty values of `Data.Text`.
category:           Data
description:        
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Non-empty values of `Data.Text`.
homepage:           https://github.com/qfpl/text1
bug-reports:        https://github.com/qfpl/text1/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog.md
                    Warning.hs
tested-with:        GHC == 7.4.2
                  , GHC == 7.6.3
                  , GHC == 7.8.4
                  , GHC == 7.10.3
                  , GHC == 8.0.2
                  , GHC == 8.2.2
                  , GHC == 8.4.1

source-repository   head
  type:             git
  location:         git@github.com:qfpl/text1.git

custom-setup
  setup-depends:
    base          >= 4 && < 5,
    Cabal,
    cabal-doctest >= 1 && < 1.1

library
  default-language:
                    Haskell2010

  build-depends:
                      base          >= 4.5 && < 4.11
                    , semigroups    >= 0.8 && < 1
                    , text          >= 1.2 && < 2
                    , lens          >= 4.0 && < 5
                    , binary        >= 0.5 && < 1
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Text1

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7 && < 0.15
                    , text1

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
